--- a/src/Web.WebApp/Components/Dialogs/ConfirmWithPasswordDialog.razor
+++ b/src/Web.WebApp/Components/Dialogs/ConfirmWithPasswordDialog.razor
@@ -13,12 +13,8 @@
         }
     </DialogContent>
     <DialogActions>
-        <MudButton OnClick="OnSecondaryButtonClicked">@SecondaryButtonText</MudButton>
-        <MudButton Color="@Color" Variant="Variant.Filled" OnClick="OnPrimaryButtonClicked"
-        Disabled="@(string.IsNullOrWhiteSpace(password))"
-        >
-            @PrimaryButtonText
-        </MudButton>
+        <AppButton OnClick="OnSecondaryButtonClicked" Text=@SecondaryButtonText />
+        <AppButton OnClick="OnPrimaryButtonClicked" Text=@PrimaryButtonText Disabled="@(string.IsNullOrWhiteSpace(password))" Color="@Color" IsLoading="@isSubmitting"/>
     </DialogActions>
 </MudDialog>
 @code {
@@ -77,7 +73,7 @@
             return;
         }
 
-        errorText = "Password is correct";
+        errorText = "Password is incorrect";
         isSubmitting = false;
         StateHasChanged();
     }
