--- a/src/Web.WebApp/Pages/Account/Register.razor
+++ b/src/Web.WebApp/Pages/Account/Register.razor
@@ -111,7 +111,7 @@
         {
             UserId = Guid.Empty,
             SubscriptionType = Core.Domain.Enums.SubscriptionType.Free,
-            ValidFrom = DateTime.UtcNow
+            Begin = DateTime.UtcNow
         };
         var user = new UserDto()
         {
