--- a/src/Web.WebApp/Pages/Admin/BudgetJarTemplatePage.razor
+++ b/src/Web.WebApp/Pages/Admin/BudgetJarTemplatePage.razor
@@ -10,7 +10,7 @@
 
 <MudContainer Class="mt-8" MaxWidth="@MaxWidth.ExtraLarge">
     <Breadcrumbs IsAdmin="true">
-        <BreadcrumbsItem Title="Budget Jars"  Icon="@Icons.Filled.Paid" />
+        <BreadcrumbsItem Title="Budget Jars"  Icon="@Icons.Filled.AccountTree" />
     </Breadcrumbs>
 
     <MudCard>
