--- a/src/Web.WebApp/Pages/Admin/SubscriptionEditDialog.razor
+++ b/src/Web.WebApp/Pages/Admin/SubscriptionEditDialog.razor
@@ -38,11 +38,11 @@
                 </MudItem>
 
                 <MudItem xs="12" sm="6">
-                    <MudDatePicker Label="Valid From" @bind-Date="@InputModel.ValidFrom" For="@(() => InputModel.ValidFrom)"
+                    <MudDatePicker Label="Begin" @bind-Date="@InputModel.Begin" For="@(() => InputModel.Begin)"
                         Placeholder="dd/mm/yyyy" DateFormat="dd/MM/yyyy" DisableToolbar="true"/>
                 </MudItem>
                 <MudItem xs="12" sm="6">
-                    <MudDatePicker Label="Valid To" @bind-Date="@InputModel.ValidTo" For="@(() => InputModel.ValidTo)" DateFormat="dd/MM/yyyy" DisableToolbar="true"/>
+                    <MudDatePicker Label="End" @bind-Date="@InputModel.End" For="@(() => InputModel.End)" DateFormat="dd/MM/yyyy" DisableToolbar="true"/>
                 </MudItem>
 
                 <MudItem xs="12" sm="6">
