--- a/src/Web.WebApp/Shared/PageFooter.razor
+++ b/src/Web.WebApp/Shared/PageFooter.razor
@@ -5,7 +5,8 @@
         <a href="./page/privacy" target="_blank">Privacy Policy</a>
     </div>
     <div class="page-footer-right">
-        <a href="https://apprector.com" target="_blank">&copy; @year App Rector</a>
+        <a href="https://apprector.com/" target="_blank">&copy; @year App Rector</a> &nbsp;
+        &#128151; Thanks <a href="https://mudblazor.com/" target="_blank">MudBlazor</a>
     </div>
 </div>
 
