--- a/src/Web.WebApp/_Imports.razor
+++ b/src/Web.WebApp/_Imports.razor
@@ -11,6 +11,7 @@
 @using Web.WebApp.Components.Breadcrumbs
 @using MudBlazor
 @using Web.WebApp.Components.Ui
+@using Core.Domain.Constants
 
 
 @attribute [Authorize]
