--- a/src/Web.WebApp/Pages/ProfilePage.razor
+++ b/src/Web.WebApp/Pages/ProfilePage.razor
@@ -1,9 +1,9 @@
 ﻿@page "/profile"
+@attribute [Authorize]
 @using Core.Application.Mediator.Users
 @using Core.Application.Models
 @using Core.Application.Providers.IProviders
 @using Core.Application.Utils
-@using Core.Domain.Constants
 @using FluentValidation
 @using MediatR
 @using Web.WebApp.Components
@@ -52,7 +52,8 @@
                         <MudTextField Label="Full Name" @bind-Value="@profileInputForm.FullName" Immediate="true" For="@(() => profileInputForm.FullName)" Class="mb-3" />
                         <MudTextField Label="Email" @bind-Value="@profileInputForm.Email" Immediate="true" For="@(() => profileInputForm.Email)" Class="mb-3" />
                         <MudTextField Label="Phone Number" @bind-Value="@profileInputForm.PhoneNumber" Immediate="true" For="@(() => profileInputForm.PhoneNumber)" Class="mb-3" />
-                        <CurrencySelection Label="Currency" @bind-Value="@profileInputForm.Currency" For="@(() => profileInputForm.Currency)" Class="mb-3" />
+                        <CurrencySelector Label="Currency" @bind-Value="@profileInputForm.Currency" For="@(() => profileInputForm.Currency)" Class="mb-3" />
+                        <TimeZoneSelector Label="Time Zone" @bind-Value="@profileInputForm.TimeZone" For="@(() => profileInputForm.TimeZone)" Class="mb-3" />
                         <AppButton Type="submit" Text="Save Change" Color="@Color.Primary" IsLoading="@isSubmitting"
                             IsDisabled="@(!formContext.IsModified() || !formContext.Validate())" />
                     </MudItem>
@@ -285,6 +286,7 @@
         public string PhoneNumber { get; set; }
         public bool PhoneNumberConfirmed { get; set; }
         public string Currency { get; set; }
+        public string TimeZone { get; set; }
         public string ProfileImage { get; set; }
 
         public ProfileInputModel(){}
@@ -297,6 +299,7 @@
             Email = user.Email;
             PhoneNumber = user.PhoneNumber;
             Currency = user.Currency;
+            TimeZone = user.TimeZone;
             ProfileImage = user.ProfileImage;
         }
 
@@ -310,6 +313,7 @@
                     Email = Email,
                     PhoneNumber = PhoneNumber,
                     Currency = Currency,
+                    TimeZone = TimeZone,
                     ProfileImage = ProfileImage
                 };
         }
