--- a/src/Web.WebApp/Pages/ProfilePage.razor
+++ b/src/Web.WebApp/Pages/ProfilePage.razor
@@ -54,6 +54,7 @@
                         <MudTextField Label="Phone Number" @bind-Value="@profileInputForm.PhoneNumber" Immediate="true" For="@(() => profileInputForm.PhoneNumber)" Class="mb-3" />
                         <CurrencySelector Label="Currency" @bind-Value="@profileInputForm.Currency" For="@(() => profileInputForm.Currency)" Class="mb-3" />
                         <TimeZoneSelector Label="Time Zone" @bind-Value="@profileInputForm.TimeZone" For="@(() => profileInputForm.TimeZone)" Class="mb-3" />
+                        <CultureSelector Label="Date Time Format (1 April 2000)" @bind-Value="@profileInputForm.CultureInfo" For="@(() => profileInputForm.CultureInfo)" DateTimeSample="@dateTimeSample" Class="mb-3" />
                         <AppButton Type="submit" Text="Save Change" Color="@Color.Primary" IsLoading="@isSubmitting"
                             IsDisabled="@(!formContext.IsModified() || !formContext.Validate())" />
                     </MudItem>
@@ -122,6 +123,7 @@
     [CascadingParameter]
     public UserDto AuthUser { get; set; } = default;
 
+    private DateTime dateTimeSample = new DateTime(2000, 4, 1, 13, 00, 00, DateTimeKind.Unspecified);
     private ProfileInputModel profileInputForm = new ProfileInputModel();
     private PasswordInputModel passwordInputForm = new PasswordInputModel();
 
@@ -287,6 +289,7 @@
         public bool PhoneNumberConfirmed { get; set; }
         public string Currency { get; set; }
         public string TimeZone { get; set; }
+        public string CultureInfo { get; set; }
         public string ProfileImage { get; set; }
 
         public ProfileInputModel(){}
@@ -301,6 +304,7 @@
             Currency = user.Currency;
             TimeZone = user.TimeZone;
             ProfileImage = user.ProfileImage;
+            CultureInfo = user.CultureInfo;
         }
 
         public UserDto ToUserDto()
@@ -314,7 +318,8 @@
                     PhoneNumber = PhoneNumber,
                     Currency = Currency,
                     TimeZone = TimeZone,
-                    ProfileImage = ProfileImage
+                    ProfileImage = ProfileImage,
+                    CultureInfo = CultureInfo,
                 };
         }
     }
