--- a/src/Web.WebApp/Pages/Account/Register.razor
+++ b/src/Web.WebApp/Pages/Account/Register.razor
@@ -19,7 +19,7 @@
 @inject IEmailService EmailService;
 @inject ILogger<Register> Logger;
 
-<SetPageTitle Value=@($"{DefaultConstants.PageTitle} - Create new account") />
+<SetPageTitle Value="@($"{DefaultConstants.PageTitle} - Create new account")" />
 
 <MudContainer Class="mt-16" MaxWidth="MaxWidth.Small">
     <MudCard Outlined="true" Elevation="1" Class="rounded-lg p-3">
