--- a/src/Web.WebApp/Shared/NavMenu.razor
+++ b/src/Web.WebApp/Shared/NavMenu.razor
@@ -13,7 +13,7 @@
             </MudNavGroup>
 
             <MudNavGroup Title="Incomes" Expanded="true">
-                <MudNavLink Href="/add-income" IconColor="@Color.Primary" Icon="@Icons.Filled.AddCircleOutline">
+                <MudNavLink Href="/income/new" IconColor="@Color.Primary" Icon="@Icons.Filled.AddCircleOutline">
                     Add Income
                 </MudNavLink>
                 <MudNavLink Href="/incomes" IconColor="@Color.Primary" Icon="@Icons.Filled.AttachMoney">
